FLOw-389 FLOW-386 f-text alignment fix and f-counter font weight fixed

--- a/packages/flow-core/src/components/f-counter/f-counter.scss
+++ b/packages/flow-core/src/components/f-counter/f-counter.scss
@@ -59,7 +59,7 @@ $states: (
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    font-weight: 400;
+    font-weight: bold;
 
     @each $size, $value in $sizes {
       &[size="#{$size}"] {
