--- a/packages/flow-core/src/components/f-text/f-text.scss
+++ b/packages/flow-core/src/components/f-text/f-text.scss
@@ -103,7 +103,6 @@ f-text {
   @include base();
   display: block;
   flex: 0 0 auto;
-  align-self: stretch;
   white-space: normal;
   word-break: break-word;
   max-width: 100%;
